tests/snapshots/ui_snapshot_tests__settings_popup_on_the_second_row.snap
---
source: tests/ui_snapshot_tests.rs
expression: render(&app).backend()
---
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│               Cihui - Chinese Vocabulary Tool  [TEXT MODE]  [EN]  [Target: English]              │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Input─────────────────────────────────────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Pinyin────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Pinyin will appear ┌Settings──────────────────────────────────────────────────┐                   │"
"│                   │  UI Language: English                                    │                   │"
"│                   │> Translation Service: < Auto >                           │                   │"
"│                   │                                                          │                   │"
"│                   │Enter/Space: toggle | Left/Right: cycle service           │                   │"
"│                   │                                                          │                   │"
"│                   │                                                          │                   │"
"│                   │                                                          │                   │"
"└───────────────────│                                                          │───────────────────┘"
"┌Translation────────│                                                          │───────────────────┐"
"│Translation will ap│                                                          │                   │"
"│                   └──────────────────────────────────────────────────────────┘                   │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"                          Settings: ↑↓ Navigate | Enter Toggle | Esc Close                          "
"                                                                                                    "
